--- a/css/1.css
+++ b/css/1.css
@@ -1,9 +1,13 @@
 body { margin:0;background:#1b2727; font-family: Trebuchet MS, Arial, sans-serif;}
 div {border-style: none;}
 p,h1 {text-align: center;}
-.mnu {color:white;width:100%;transition: 0.5s;  border-top: 2px solid transparent; border-bottom: 2px solid transparent;}
+.mnu {color:white;width:100%;transition: 0.5s;  border-top: 2px solid transparent; border-bottom: 2px solid transparent;
+display:flex;
+-ms-align-items: center;
+align-items: center;
+}
 .mnu span{margin-right: 20px; margin-left: 20px; font-size: 20px;}
-.mnu>p {margin-left: 20px;}
+.mnu>p {margin-left: 20px; width: 100%;}
 span>.small-text{margin-left: 0px; font-size: 0.6em;}
 .mnu:nth-child(even) {background-color: #8785A1;}
 .mnu:nth-child(odd) {background-color: #ADAACE;}
@@ -16,3 +20,25 @@ footer {width:50%; margin:auto;  display: flex; align-items: center; justify-con
 footer a{ text-decoration: none; color: tomato;}
 [type="checkbox"]:checked +label{text-decoration: line-through; color: darkgrey;text-shadow: black 1px 1px 2px;}
 ::selection { text-shadow: silver -1px -1px 1px}
+
+.active {color:red;}
+
+.rem {
+	height:100%;
+	background-color: darkgray;
+	color: silver;
+	border-radius: 5px;
+	font-size: 15px;
+	text-shadow: black 1px 1px 1px;
+	margin-right: 10px;
+}
+.form {
+	margin: 30px auto;
+	width: 50%;
+	display: flex;
+}
+.form input {
+	flex-grow: 1;
+}
+.form button {
+	}
